Fixes menu margin on small screens

--- a/app/_scss/sitewide/_header.scss
+++ b/app/_scss/sitewide/_header.scss
@@ -32,6 +32,7 @@ body {
 
 			ul {
 				padding: 0;
+				margin: 0;
 				line-height: inherit;
 				font-size: inherit;
 				letter-spacing: inherit;
